[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "argon2-cffi>=25.1.0",
    "fastapi[standard]>=0.136.3",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pymango>=0.1.1",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "redis>=8.0.0",
    "requests>=2.34.2",
    "resources>=0.0.1",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.50",
    "staty>=1.2.4",
    "uvicorn>=0.49.0",
]
